[tool.poetry]
name = "timeseries-db-demo"
version = "0.1.0"
description = ""
authors = ["amrahhh <bagirovemrah97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
influxdb-client = "^1.45.0"
fastapi = "^0.113.0"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
